Refactored the system

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,33 +20,44 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
-        android:visibility="gone"
         android:id="@+id/openCamerBtn"
-        android:layout_width="196dp"
+        android:layout_width="120dp"
         android:layout_height="70dp"
         android:layout_marginTop="65dp"
         android:layout_weight="2"
+        android:enabled="false"
         android:onClick="openCamera"
         android:text="Open Camera"
-        app:layout_constraintBottom_toTopOf="@+id/openGalleryBtn"
+        app:layout_constraintBottom_toBottomOf="@+id/openGalleryBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.232" />
+        app:layout_constraintTop_toTopOf="@+id/openGalleryBtn"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/openGalleryBtn"
-        android:layout_width="196dp"
+        android:layout_width="120dp"
         android:layout_height="70dp"
         android:layout_weight="2"
         android:onClick="openGallery"
         android:text="Gallery"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.448" />
+        app:layout_constraintVertical_bias="0.432" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="We detect your emotion"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
